--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -8,4 +8,17 @@
     <a mat-list-item routerLink="#" (click)="onSidenavClose()">
         <mat-icon>account_balance</mat-icon><span class="nav-caption">Account Actions</span>
     </a>
+    <a mat-list-item routerLink="/price" (click)="onSidenavClose()">
+        <mat-icon>account_balance</mat-icon><span class="nav-caption">Price</span>
+    </a>
+    <a mat-list-item routerLink="/fieldwork" (click)="onSidenavClose()">
+        <mat-icon>account_balance</mat-icon><span class="nav-caption">Field Work</span>
+    </a>
+    <a mat-list-item routerLink="/average" (click)="onSidenavClose()">
+        <mat-icon>account_balance</mat-icon><span class="nav-caption">Average</span>
+    </a>
+    <a mat-list-item routerLink="/datedifference" (click)="onSidenavClose()">
+        <mat-icon>account_balance</mat-icon><span class="nav-caption">Date difference</span>
+    </a>
+    
   </mat-nav-list>
