--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-      My Application
+      Home
       <span class="toolbar-spacer"></span>
       My Account
     </mat-toolbar>
