--- a/src/app/popups/add-field-work/add-field-work.component.html
+++ b/src/app/popups/add-field-work/add-field-work.component.html
@@ -1,25 +1,41 @@
 <h1 mat-dialog-title>Hi {{data.name}}</h1>
 <div mat-dialog-content>
   <mat-form-field appearance="fill">
+    <mat-label>From date</mat-label> 
+    <input matInput #fromDate 
+        (dateChange)="fromDateChange($event)" autocomplete="off" 
+        [matDatepicker]="frompicker">
+    <mat-datepicker-toggle matSuffix [for]="frompicker"></mat-datepicker-toggle>
+    <mat-datepicker #frompicker [startAt]="selectedDate"></mat-datepicker>
+</mat-form-field>
+
+  <!-- <mat-form-field appearance="fill">
     <mat-label>Choose a date</mat-label>
     <input matInput [matDatepicker]="picker" [(ngModel)]="selectedDate">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
-  
-    <mat-form-field appearance="fill">
-        <mat-label>State</mat-label>
-        <mat-select [(ngModel)]="selectedUserId">
-          <mat-option>None</mat-option>
-          <mat-option *ngFor="let state of userList" [value]="state.id">{{state.firstname}}</mat-option>
-        </mat-select>
+  <mat-label>{{selectedDate}}</mat-label> -->
+  <mat-form-field appearance="fill">
+    <mat-label>{{selectedDate}}</mat-label>
+    <mat-select [(ngModel)]="selectedUserId">
+      <mat-option>None</mat-option>
+      <mat-option *ngFor="let state of userList" [value]="state.id">{{state.firstname}}</mat-option>
+    </mat-select>
+  </mat-form-field>
 
-       
-      </mat-form-field>
-      <mat-form-field appearance="fill">
-        <mat-label>Favorite Animal</mat-label>
-        <input matInput [(ngModel)]="weightValue">
-      </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>Price</mat-label>
+    <mat-select [(ngModel)]="priceId">
+      <mat-option>None</mat-option>
+      <mat-option *ngFor="let state of priceList" [value]="state.id">{{state.name}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field appearance="fill">
+    <mat-label>Favorite Animal</mat-label>
+    <input matInput [(ngModel)]="weightValue">
+  </mat-form-field>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">CANCEL</button>
