--- a/src/app/popups/add-field-work/add-field-work.component.html
+++ b/src/app/popups/add-field-work/add-field-work.component.html
@@ -17,7 +17,7 @@
   </mat-form-field>
   <mat-label>{{selectedDate}}</mat-label> -->
   <mat-form-field appearance="fill">
-    <mat-label>{{selectedDate}}</mat-label>
+    <mat-label>Name</mat-label>
     <mat-select [(ngModel)]="selectedUserId">
       <mat-option>None</mat-option>
       <mat-option *ngFor="let state of userList" [value]="state.id">{{state.firstname}}</mat-option>
@@ -26,7 +26,7 @@
 
   <mat-form-field appearance="fill">
     <mat-label>Price</mat-label>
-    <mat-select [(ngModel)]="priceId">
+    <mat-select [(ngModel)]="selectedPriceId">
       <mat-option>None</mat-option>
       <mat-option *ngFor="let state of priceList" [value]="state.id">{{state.name}}</mat-option>
     </mat-select>
