Product price Add record

--- a/src/app/popups/add-product-buy-sell/add-product-buy-sell.component.html
+++ b/src/app/popups/add-product-buy-sell/add-product-buy-sell.component.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>Hi </h1>
 <mat-slide-toggle [(ngModel)]="buyOrSell" (change)="onBuySellChange()">Buy</mat-slide-toggle>
 <div mat-dialog-content>
-  <!-- <mat-form-field appearance="fill">
+  <mat-form-field appearance="fill">
     <mat-label>Choose a date</mat-label>
     <input matInput [matDatepicker]="picker" [(ngModel)]="selectedDate">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
@@ -9,23 +9,23 @@
   </mat-form-field>
 
 <mat-form-field appearance="fill">
-<mat-label>User</mat-label>
+<mat-label>Product</mat-label>
 <mat-select [(ngModel)]="selectedProductId">
   <mat-option>None</mat-option>
-  <mat-option *ngFor="let state of userList" [value]="state.id">{{state.name}}</mat-option>
+  <mat-option *ngFor="let state of productList" [value]="state.id">{{state.name}}</mat-option>
 </mat-select>
-</mat-form-field> -->
+</mat-form-field> 
 
-<!-- <mat-form-field appearance="fill">
-  <mat-label>User</mat-label>
+ <mat-form-field appearance="fill">
+  <mat-label>Category</mat-label>
   <mat-select [(ngModel)]="selectedProductCategoryId">
     <mat-option>None</mat-option>
-    <mat-option *ngFor="let state of userList" [value]="state.id">{{state.name}}</mat-option>
+    <mat-option *ngFor="let state of productCategoryList" [value]="state.id">{{state.name}}</mat-option>
   </mat-select>
-  </mat-form-field> -->
+  </mat-form-field>
 
       <mat-form-field appearance="fill">
-        <mat-label>Name</mat-label>
+        <mat-label>Qty.</mat-label>
         <input matInput [(ngModel)]="quantity">
       </mat-form-field>
 
