--- a/src/app/agriculture/buy-sell/buy-sell.component.html
+++ b/src/app/agriculture/buy-sell/buy-sell.component.html
@@ -15,13 +15,13 @@
       <!-- Position Column -->
       <ng-container matColumnDef="product">
         <th mat-header-cell *matHeaderCellDef> Product </th>
-        <td mat-cell *matCellDef="let element"> {{element.product}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
       </ng-container>
   
       <!-- Name Column -->
       <ng-container matColumnDef="productcategory">
         <th mat-header-cell *matHeaderCellDef> Product Category </th>
-        <td mat-cell *matCellDef="let element" > {{element.productCategory}} </td>
+        <td mat-cell *matCellDef="let element" > {{element.productCategoryName}} </td>
       </ng-container>
 
        <!-- Name Column -->
